@@ -35,6 +35,7 @@ t/data/cnb000641953.mrc
 t/data/cnb000750575.xml
 t/data/cnb000750997.mrc
 t/data/cnb000754547.mrc
+t/data/cnb000964081.xml
 t/data/cnb000974260.mrc
 t/data/cnb001002340.mrc
 t/data/cnb001042253.mrc
@@ -82,12 +83,13 @@ t/MARC-Convert-Wikidata-Transform/08-object-cnb000103538.t
 t/MARC-Convert-Wikidata-Transform/09-object-cnb000576456.t
 t/MARC-Convert-Wikidata-Transform/10-object-cnb000750575.t
 t/MARC-Convert-Wikidata-Transform/11-object-cnb000750997.t
-t/MARC-Convert-Wikidata-Transform/12-object-cnb001042253.t
-t/MARC-Convert-Wikidata-Transform/13-object-cnb001756719.t
-t/MARC-Convert-Wikidata-Transform/14-object-cnb002031137.t
-t/MARC-Convert-Wikidata-Transform/15-object-cnb002662450.t
-t/MARC-Convert-Wikidata-Transform/16-object-cnb003565872.t
-t/MARC-Convert-Wikidata-Transform/17-object-cnb003633764.t
+t/MARC-Convert-Wikidata-Transform/12-object-cnb000964081.t
+t/MARC-Convert-Wikidata-Transform/13-object-cnb001042253.t
+t/MARC-Convert-Wikidata-Transform/14-object-cnb001756719.t
+t/MARC-Convert-Wikidata-Transform/15-object-cnb002031137.t
+t/MARC-Convert-Wikidata-Transform/16-object-cnb002662450.t
+t/MARC-Convert-Wikidata-Transform/17-object-cnb003565872.t
+t/MARC-Convert-Wikidata-Transform/18-object-cnb003633764.t
 t/MARC-Convert-Wikidata-Utils/01-use.t
 t/MARC-Convert-Wikidata-Utils/02-version.t
 t/MARC-Convert-Wikidata-Utils/03-clean_cover.t
