@@ -35,7 +35,7 @@ requires:
   DateTime: 0
   English: 0
   Error::Pure: 0
-  MARC::Convert::Wikidata::Object: 0.1
+  MARC::Convert::Wikidata::Object: 0.13
   MARC::Convert::Wikidata::Object::ExternalId: 0
   MARC::Convert::Wikidata::Object::ISBN: 0.07
   MARC::Convert::Wikidata::Object::Kramerius: 0
