@@ -14,6 +14,7 @@ cnb000641953.mrc - Special format of series ordinal (490 field).
 cnb000750575.xml - Field 700 with t subfield.
 cnb000750997.mrc
 cnb000754547.mrc
+cnb000964081.xml - Two editions (paperback, hardback) (020 field).
 cnb000974260.mrc - Has sine loco as publication place.
 cnb001002340.mrc - Right and bad ISBNs.
 cnb001042253.mrc - Publication date in format [19--].
@@ -35,3 +36,4 @@ cnb003369415.mrc - Has weird format of number of pages (300 field).
 cnb003565872.xml - Has cycle (787 field).
 cnb003591924.xml - Slovak edition.
 cnb003633764.xml - Bad ISBN only.
+
