@@ -1,4 +1,5 @@
 0.29
+ - Rewrite processing of covers.
 
 0.28 2025-03-30T16:33:14+02:00
  - Add test file for field 700 testing.
